[package]
name = "rust-tui-crates"
version = "0.1.0"
authors = ["meganehouser <sleepy.st818@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pancurses = "0.16"
ncurses = "5.99.0"
termbox = "0.2.0"
rustbox = "0.11.0"
termion = "1.5.3"
crossterm = "0.13.3"
cursive = "0.13"